# linsolver

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CMakeLists.txt  README.md  README.rst  travis.sh
docs/: CMakeLists.txt  Doxyfile.in  Makefile  base_backends.rst  base_solvers.rst  cg.rst  cgs.rst  conf.py  device_backends.rst  device_matrix.rst  device_vector.rst  documentation.rst  gmres.rst  host_backends.rst  host_matrix.rst  host_vector.rst  index.rst  jacobi.rst  preconditioners.rst  requirements.txt  solvers.rst  ssor.rst
docs/source/: conf.py  index.rst
include/backends/: base_matrix.h  base_vector.h
include/backends/device/: device_matrix.h  device_matrix_helper.cuh  device_vector.h  device_vector_helper.cuh
include/backends/host/: host_matrix.h  host_matrix_coo.h  host_vector.h
include/base/: backend_wrapper.h  cublas_wrapper.cuh  cuda_error_helper.cuh  cuda_header.cuh  cusparse_wrapper.cuh  error.h
include/solvers/: base_direct_solver.h  base_iterative_solver.h  base_preconditioner.h  base_solver.h  cg.h  cgs.h  gmres.h  ilu.h  jacobi.h  ssor.h
src/: CMakeLists.txt
src/backends/: CMakeLists.txt  base_matrix.cpp  base_vector.cpp
src/backends/device/: CMakeLists.txt  device_matrix.cpp  device_vector.cpp
src/backends/host/: CMakeLists.txt  host_matrix.cpp  host_matrix_coo.cpp  host_vector.cpp
src/base/: CMakeLists.txt  backend_wrapper.cpp
src/solvers/: CMakeLists.txt  base_direct_solver.cpp  base_iterative_solver.cpp  base_preconditioner.cpp  base_solver.cpp  cg.cpp  cgs.cpp  gmres.cpp  ilu.cpp  jacobi.cpp  ssor.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  device_cgs_test.cpp  device_gmres_test.cpp  device_matrix_test.cpp  device_vector_test.cpp  gmres_test.cpp  host_cg_test.cpp  host_cgs_test.cpp  host_gmres_test.cpp  host_jacobi_test.cpp  host_matrix_coo_test.cpp  host_matrix_test.cpp  host_vector_test.cpp  mm_test.mtx
